=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta10

    * fixed a few bugs in the molecular editor 

    * preliminary work on "h_fix" command

    beta09

    * now ignoring SCALEn if it is the identity matrix

    * pdb parser now pays attention to column information in the
      atom name field for inferring ambiguous element symbols

    * pdb_literal_names now works for real, taking the literal contents
      of the 4-character atom field including spaces

    beta08                                                                                  

    * eliminated annoying exception on blank command input

    * fixed crasher bug in phi_psi command

    * exceptions not caught for startup/command-line actions

    * improved behavior of "multiplex" option for PDB file loads

    * made some changed to apbs_tools.py                                                    
                                                                                            
    * updated apbs_tools.py also fixed or added NME, NHE, ACE, TIP resns.                   
                                                                                            
    * added save/restore of state-specific settings for molecule and                        
     distance (measurement) objects.                                                        
                                                                                            
    * fixed bug with label font & colors when editing                                       
                                                                                            
    beta07                                                                                  
                                                                                            